Caps lock has reversed meaning for applications (after random button presses and switch to GDM)
So, I cleaned my laptop keyboard and touchpad … and now capslock is broken
All I know is:
- I pressed a lot of random keys and the touchpad
- I ended up in the GDM screen, so I must have activated the "log in as another user" option
And now my capslock state is messed up:
- If my capslock LED is on, then gnome-shell has capslock but applications do not
- If my capslock LED is off, then applications have capslock but the shell does not
I am happy to poke at my currently broken system, but will log out/reboot eventually. I am just reporting this against mutter as I have no idea where in the input stack this might be going wrong.